--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.3.0",
+    "@fullpage/react-fullpage": "^0.1.19",
     "@material-tailwind/react": "0.3.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "aos": "^3.0.0-beta.6",
     "daisyui": "^1.14.4",
     "react": "^17.0.2",
     "react-animate-on-scroll": "^2.1.5",
