--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "daisyui": "^1.14.4",
     "react": "^17.0.2",
     "react-animate-on-scroll": "^2.1.5",
+    "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
